setup JavaFX