@@ -1,5 +1,7 @@
 plugins {
     id("java")
+    id("application")
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "nu.csse.sqe"
@@ -18,6 +20,16 @@ dependencies {
     testImplementation("org.easymock:easymock:5.4.0")
 }
 
+application {
+    mainModule.set("risk")
+    mainClass.set("ui.Main")
+}
+
+javafx {
+    version = "17.0.2"
+    modules = listOf("javafx.controls")
+}
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(11)
@@ -30,4 +42,19 @@ tasks.compileJava {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.register<Exec>("jlink") {
+    dependsOn("jar")
+    commandLine(
+        "${System.getProperty("java.home")}/bin/jlink",
+        "--module-path", "${System.getProperty("java.home")}/jmods:${configurations.runtimeClasspath.get().asPath}:build/libs/sqe-course-project-1.0.jar",
+        "--add-modules", "risk,javafx.controls,javafx.graphics,javafx.base",
+        "--output", "build/image",
+        "--launcher", "Risk=risk/ui.Main",
+        "--strip-debug",
+        "--compress", "2",
+        "--no-header-files",
+        "--no-man-pages"
+    )
 }
